--- a/进制转换.md
+++ b/进制转换.md
@@ -4,13 +4,13 @@
 
 ## 二进制转十进制
 
-![1560518027595](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\01.png)
+![01](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\01.png)
 
 
 
 ## 十进制转二进制
 
-**![1560518323352](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\02.png)**
+**![02](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\02.png)**
 
 整数部分:分解为2乘一个数加（0|1），最后的（0|1）扔后面，	        结果 ↑排列
 
@@ -18,27 +18,27 @@
 
 ## 二进制转八进制
 
-![1560519086720](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\03.png)
+![03](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\03.png)
 
 ## 八进制转二进制
 
-![1560519258672](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\04.png)
+![04](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\04.png)
 
 ## 二进制转十六进制
 
-![1560519506596](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\05.png)
+![05](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\05.png)
 
 和上面的二转八差不多，无非是这个时4个一组
 
 ## 十六进制转二进制
 
-![1560519777941](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\06.png)
+![06](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\06.png)
 
 
 
 ## 任意进制转换
 
-![1560520018587](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07.png)
+![07](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07.png)
 
 先转成二进制，再转成目标进制
 
@@ -46,7 +46,7 @@
 
 
 
-![1560520102605](C:\Users\JASONL~1\AppData\Local\Temp\1560520102605.png)
+![08](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\08.png)
 
 
 
