--- a/进制转换.md
+++ b/进制转换.md
@@ -4,13 +4,13 @@
 
 ## 二进制转十进制
 
-![01](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\01.png)
+![01](img\01.png)
 
 
 
 ## 十进制转二进制
 
-**![02](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\02.png)**
+**![02](img\02.png)**
 
 整数部分:分解为2乘一个数加（0|1），最后的（0|1）扔后面，	        结果 ↑排列
 
@@ -18,27 +18,27 @@
 
 ## 二进制转八进制
 
-![03](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\03.png)
+![03](img\03.png)
 
 ## 八进制转二进制
 
-![04](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\04.png)
+![04](img\04.png)
 
 ## 二进制转十六进制
 
-![05](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\05.png)
+![05](img\05.png)
 
 和上面的二转八差不多，无非是这个时4个一组
 
 ## 十六进制转二进制
 
-![06](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\06.png)
+![06](img\06.png)
 
 
 
 ## 任意进制转换
 
-![07](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07.png)
+![07](img\07.png)
 
 先转成二进制，再转成目标进制
 
@@ -46,7 +46,7 @@
 
 
 
-![08](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\08.png)
+![08](img\08.png)
 
 
 
