--- a/04_逻辑代数常用公式.md
+++ b/04_逻辑代数常用公式.md
@@ -1,5 +1,34 @@
-#常用公式
+#公式法化简逻辑表达式
 ![](img/04-01.png)
+
+真正用的频繁的只有画圈的那几个
+
+##吸收法
+
+![img](http://image109.360doc.com/DownloadImg/2018/01/0913/121404191_17_20180109015629390.jpg) 
+
+此时可以将B看作是多余的乘积项
+
+![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\04-02.jpg)
+
+上述例子中画框的部分都可以看做是B然后消掉
+
+## 消去法
+
+![img](http://image109.360doc.com/DownloadImg/2018/01/0913/121404191_22_20180109015629656.jpg) 
+
+此时**A非**可以看做是多余因子
+
+## 配项法
+
+利用表格中的重叠率
+
+**建议练习题**：P22页1-14
+
+PS：这块硬背是没卵用的，还是找几个题写写心里比较踏实
+
+
+
 #逻辑代数的三条规则
 ##代入规则
 多变量可以等价代替原式中某一单变量
