--- a/07_译码器接线图.md
+++ b/07_译码器接线图.md
@@ -2,57 +2,57 @@
 
 ## 请使用74138译码器和门电路实现逻辑函数L=AB+BC+AC
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-01.PNG)
+![](img/07-01.PNG)
 
 第一步:左脚带圈画0不带圈画1，右脚写上函数变量(多为ABC)
 
 第二步:把给的函数化成最小项
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-02.PNG)
+![](img/07-02.PNG)
 
 
 
-第三步:![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-03.PNG)
+第三步:![](img/07-03.PNG)
 
 
 
 if(存在单独的Y拔){
 
-就利用 ![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-04.PNG)将其转换
+就利用 ![](img/07-04.PNG)将其转换
 
 }
 
-转换结果: ![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-05.PNG)
+转换结果: ![](img/07-05.PNG)
 
 
 
-最后一步:根据关系画线： ![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-06.PNG)
+最后一步:根据关系画线： ![](img/07-06.PNG)
 
 # 根据译码器接线图写出逻辑函数
 
 写出下列接线图L的逻辑表达式
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-07.PNG)
+![](img/07-07.PNG)
 
 第一步:先写出L与Y的关系式(上种类型逆推)
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-08.PNG)
+![](img/07-08.PNG)
 
-第二步: ![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-09.PNG)
+第二步: ![](img/07-09.PNG)
 
 第三步:利用下面的公式化简：
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-10.PNG)
+![](img/07-10.PNG)
 
 第四步:将最小项变成表达式，最后再化简
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-11.PNG)
+![](img/07-11.PNG)
 
  # 使用8选一数据选择器实现3输入逻辑函数
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-12.PNG)
+![](img/07-12.PNG)
 
- ![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-13.PNG)
+ ![](img/07-13.PNG)
 
 第一步:最左面写上0或1(还看带不带圈)，中间那叁写上输入量(多为ABC)
 
@@ -60,7 +60,7 @@ if(存在单独的Y拔){
 
 第三步:把上一步的m变成D
 
-![](C:\Users\Jasonleee\Desktop\DigitalCircuits\img\07-14.PNG)
+![](img/07-14.PNG)
 
 第四步:有上步结果的拿出来接1，没有的接0
 
