--- a/03_卡诺图.md
+++ b/03_卡诺图.md
@@ -4,7 +4,7 @@
 
 第一步：圈出来**相邻的**（PS:卡诺图中是边界联通的）8个1，圈不出8个圈4个，以此类推
 
-第二步:   判断圈出来的8个1，圈出来的四个1，以及圈出来的剩下的1是否在A,B,C,D区域中
+第二步:   判断圈出来的8个1，圈出来的四个1，以及圈出来的剩下的1是否在A,B,C,D区域中，找的过程中可以利用之前找过的
 
 eg:![](img/03-02.PNG)
 
